--- a/src/components/intro/hero-section/style.scss
+++ b/src/components/intro/hero-section/style.scss
@@ -6,11 +6,17 @@
     flex-grow: 1;
     display: flex;
     align-items: flex-end;
+    // justify-content: center;
+    // align-items: center;
     .layout{
         display: flex;
         .left-section{
-            width: 45%;
-            align-items: center;
+            width: 47%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            margin-top: 50px;
+            // justify-content: center;
             @include medium-screen{
                 padding-top:55px;
             }
@@ -42,17 +48,22 @@
             }
         }
         .right-section{
-            width: 55%;
+            width: 50%;
             display: flex;
             align-items: flex-end;
             position: relative;
             @include large-screen{
-                width: 63%;
+                width:63%;
             }
             img{
                 width: 100%;
                 display: block;
                 margin-bottom:40px;
+                transform: scaleX(-1);
+                padding-left: 40px;
+                margin-left: 120px;
+                // position: absolute;
+                left: 50px;
                 @include large-screen{
                     margin-bottom: 50px;
                     position: relative;
